@@ -1,3 +1,7 @@
+2006-12-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* include/atomic.h (atomic_forced_read): New macro.
+
 2006-12-20  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>
 
 	* sysdeps/unix/sysv/linux/sh/bits/shm.h: New file.
